# my-project

./: .gitignore  AI_CATEGORIZATION_IMPLEMENTATION.md  AI_DIAGNOSTICS_SUMMARY.md  CLAUDE.md  MANUAL_CATEGORY_SELECTION_IMPLEMENTATION.md  README.md  WEB_SETUP.md  analyze_transactions.py  bank_processor.py  create_test_pdf.py  gemini.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  start-web-app.sh  test_ai_endpoint.json
.github/workflows/: test.yml
bank-statement-processor/docs/: GEMINI.md
docs/: CONTRIBUTING.md  PATTERNS.md  USAGE.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.module.css  App.tsx  SimpleApp.tsx  index.css
frontend/src/components/: AnalysisReportModal.tsx  CategorySummary.module.css  CategorySummary.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  FileUpload.module.css  FileUpload.tsx  ProgressDisplay.module.css  ProgressDisplay.tsx  Report.jsx  ResultsTable.module.css  ResultsTable.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: ReportPage.tsx
frontend/src/services/: ai.ts  api.ts  simpleApi.ts
frontend/src/state/: aiCategories.ts
frontend/src/types/: api.ts
scripts/: start-api.sh  start-frontend.sh
src/: main.py
src/analyzer/: __init__.py  analyzer.py  analyzer.toml  base_categorizer.py  cache.py  cli.py  config.py  gemini_categorizer.py  mock_categorizer.py  models.py  processors.py  templates.py  transaction_categorizer.py  visualizer.py
src/api/: __init__.py  auth.py  jobs.py  main.py  models.py  simple_main.py
src/core/: exceptions.py
src/exporters/: csv_exporter.py
src/extractors/: amount_normalizer.py  table_extractor.py  upi_extractor.py
src/lib/: __init__.py  api.py
src/parsers/: base_parser.py  parser_factory.py  sbi_parser.py  union_bank_parser.py
src/validators/: transaction_validator.py
tests/: conftest.py  test_api_upload.py  test_cli.py  test_jobs.py
tests/unit/: test_cli.py  test_edge_cases.py  test_parsers.py
